# pkg/web/docs/swagger.yaml
@@ -2,18 +2,18 @@ basePath: /api
 definitions:
   config.FeedLogLevel:
     enum:
+    - 1
     - 0
     - 1
     - 2
     - 3
-    - 1
     type: integer
     x-enum-varnames:
+    - defaultSourcesFeedLogLevel
     - DebugFeedLogLevel
     - InfoFeedLogLevel
     - WarnFeedLogLevel
     - ErrorFeedLogLevel
-    - defaultSourcesFeedLogLevel
   models.Error:
     properties:
       code:
@@ -38,6 +38,56 @@ definitions:
       waiting:
         type: integer
     type: object
+  time.Duration:
+    enum:
+    - 1
+    - 1000
+    - 1000000
+    - 1000000000
+    - 60000000000
+    - 1
+    - 1000
+    - 1000000
+    - 1000000000
+    - 60000000000
+    - 3600000000000
+    type: integer
+    x-enum-varnames:
+    - Nanosecond
+    - Microsecond
+    - Millisecond
+    - Second
+    - Minute
+    - Nanosecond
+    - Microsecond
+    - Millisecond
+    - Second
+    - Minute
+    - Hour
+  web.attentionSources.attention:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  web.defaultSourceConfig.sourceConfig:
+    properties:
+      age:
+        $ref: '#/definitions/web.sourceAge'
+      log_level:
+        $ref: '#/definitions/config.FeedLogLevel'
+      rate:
+        type: number
+      secure:
+        type: boolean
+      signature_check:
+        type: boolean
+      slots:
+        type: integer
+      strict_mode:
+        type: boolean
+    type: object
   web.feed:
     properties:
       id:
@@ -52,6 +102,67 @@ definitions:
         $ref: '#/definitions/sources.Stats'
       url:
         type: string
+    type: object
+  web.feedLogs.entry:
+    properties:
+      feed_id:
+        type: integer
+      level:
+        $ref: '#/definitions/config.FeedLogLevel'
+      msg:
+        type: string
+      time:
+        type: string
+    type: object
+  web.feedLogs.feedLogEntries:
+    properties:
+      count:
+        type: integer
+      entries:
+        items:
+          $ref: '#/definitions/web.feedLogs.entry'
+        type: array
+    type: object
+  web.feedResult:
+    properties:
+      feeds:
+        items:
+          $ref: '#/definitions/web.feed'
+        type: array
+    type: object
+  web.keepFeedTime.keepFeedTimeConfig:
+    properties:
+      keep_feed_time:
+        $ref: '#/definitions/time.Duration'
+    type: object
+  web.sourceAge:
+    properties:
+      time.Duration:
+        enum:
+        - 1
+        - 1000
+        - 1000000
+        - 1000000000
+        - 60000000000
+        - 1
+        - 1000
+        - 1000000
+        - 1000000000
+        - 60000000000
+        - 3600000000000
+        type: integer
+        x-enum-varnames:
+        - Nanosecond
+        - Microsecond
+        - Millisecond
+        - Second
+        - Minute
+        - Nanosecond
+        - Microsecond
+        - Millisecond
+        - Second
+        - Minute
+        - Hour
     type: object
 info:
   contact:
@@ -227,9 +338,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/web.feed'
-            type: array
+            $ref: '#/definitions/web.feedResult'
         "400":
           description: could not parse stats
           schema:
@@ -262,7 +371,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/web.feed'
+              $ref: '#/definitions/models.ID'
             type: array
         "400":
           description: could not parse stats
@@ -277,6 +386,39 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Creates a feed.
+  /sources/attention:
+    get:
+      description: All sources that had a change and should be reviewed are returned.
+      parameters:
+      - description: Return all sources
+        in: query
+        name: all
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/web.attentionSources.attention'
+            type: array
+        "400":
+          description: could not parse all
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Returns a list of sources that need attention.
+  /sources/default:
+    get:
+      description: Returns the default parameters for the source configuration.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.defaultSourceConfig.sourceConfig'
+      summary: Returns the default configuration.
   /sources/feeds/{id}:
     put:
       description: Updates a feed with the specified configuration.
@@ -292,9 +434,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/web.feed'
-            type: array
+            $ref: '#/definitions/models.Success'
         "400":
           description: Bad Request
           schema:
@@ -303,6 +443,57 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Updates a feed.
+  /sources/feeds/{id}/log:
+    get:
+      description: Updates a feed with the specified configuration.
+      parameters:
+      - description: Feed ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.feedLogs.feedLogEntries'
+        "400":
+          description: could not parse id
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Updates a feed.
+  /sources/feeds/keep:
+    get:
+      description: Returns the time it takes until old feed entries are deleted.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.keepFeedTime.keepFeedTimeConfig'
+      summary: Returns how long feed logs are kept.
+  /sources/feeds/log:
+    get:
+      description: Updates a feed with the specified configuration.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.feedLogs.feedLogEntries'
         "500":
           description: Internal Server Error
           schema:
